src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 220, 235, 220;

  --connections-yellow: 249, 223, 109;
  --connections-green: 160, 195, 90;
  --connections-blue: 176, 196, 239;
  --connections-purple: 186, 129, 197;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 12, 18, 18;
    --background-end-rgb: 20, 35, 20;

    --connections-yellow: 143, 120, 19;
    --connections-green: 85, 122, 11;
    --connections-blue: 26, 54, 115;
    --connections-purple: 77, 14, 89;
  }
}

body, .bg-fade {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
    to bottom,
    transparent 80%,
    rgb(var(--background-end-rgb))
  )
  rgb(var(--background-start-rgb));
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

button {
  transition:
    color 75ms ease-in-out,
    background-color 75ms ease-in-out,
    opacity 250ms ease-in-out 250ms,
    transform 75ms ease-in-out;
}

/* RADIX */

.SeparatorRoot[data-orientation='horizontal'] {
  height: 1px;
  width: 100%;
}
.SeparatorRoot[data-orientation='vertical'] {
  height: 100%;
  width: 1px;
}

.AvatarRoot {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
  overflow: hidden;
  user-select: none;
  border-radius: 100%;
}

.AvatarImage {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: inherit;
}

.AvatarFallback {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

